# ship_page_generator

./: CMakeLists.txt  generate_self_signed_keys.sh
benchmark/: CMakeLists.txt  benchmark.cpp  connection.h  create_socket.h  raw_socket.h  ssl_socket.h
get_from_postgres/: aircraft_info.cpp  aircraft_info.h  armament_info.cpp  armament_info.h  documents_info.cpp  documents_info.h  parse_response.cpp  pictures.cpp  pictures.h  propulsion.cpp  propulsion.h  ship_armament.cpp  ship_armament.h  ship_armament_lt.cpp  ship_armament_lt.h  ship_event.cpp  ship_event.h  ship_info.cpp  ship_info.h  ship_propulsion.cpp  ship_propulsion.h  ship_requests.h  template_request.h
image_resize/: CMakeLists.txt  resize_image.cpp
libraries/: repositories
server/: date_to_str.cpp  date_to_str.h  https_server.cpp  mongoose.c  mongoose.h  parse_query.cpp  parse_query.h  responses.h  simple_string.h  simple_string_char.h  upgrade_to_https.cpp  upgrade_to_https.h  validate_path.cpp  validate_path.h
server/allocators/: CMakeLists.txt  allocator.h  allocator_avl.cpp  allocator_list.cpp  allocators_test  test_allocator.cpp
server/driver/: buffer.h  connection.h  connection_helper.h  cool_hackers_requests__he_he  epoll_wrap.h  file_to_send.h  last_active.h  raw_socket.h  server.h  ssl_socket.cpp  ssl_socket.h
server/response/: date_to_str.h  day_events.h  dist_livenshtein.cpp  dist_livenshtein.h  documents.cpp  documents.h  file_cacher.h  html_template.h  html_view_pictures.cpp  html_view_pictures.h  menu.cpp  menu.h  menu_html.cpp  parse_query.cpp  parse_query.h  response.h  search.cpp  search.h  ship_names.cpp  ship_names.h  ship_names_list.h  style.cpp
server/response/aircraft/: response_aircraft.cpp  response_aircraft.h
server/response/armament/: append_row.h  base_comparators.h  base_compare_predict.h  group_and_sorting.h  parse_query.cpp  parse_query.h  registrators.h  response_catapult.cpp  response_catapult.h  response_guns.cpp  response_guns.h  response_mines_charges.cpp  response_mines_charges.h  response_searchers.cpp  response_searchers.h  response_torpedo.cpp  response_torpedo.h  response_torpedo_tubes.cpp  response_torpedo_tubes.h  table.h
server/response/armament/types/: response_catapult.cpp  response_catapult.h  response_guns.cpp  response_guns.h  response_mines_charges.cpp  response_mines_charges.h  response_partial.h  response_searchers.cpp  response_searchers.h  response_torpedo.cpp  response_torpedo.h  response_torpedo_tubes.cpp  response_torpedo_tubes.h
server/response/date_order/: dekart_tree.h  nested_segments.cpp  nested_segments.h
server/response/ship/: ship.cpp  ship.h
server/response/ship/date_order/: dekart_tree.h  nested_segments.cpp  nested_segments.h
server/response/ship_armament/: aircraft.cpp  aircraft.h  armament_links.h  catapult.cpp  catapult.h  general.cpp  general.h  guns.cpp  guns.h  response_ship_armament.cpp  response_ship_armament.h  searchers.cpp  searchers.h  ship_armament_utils.h  ship_names.cpp  ship_names.h  throwers.cpp  throwers.h  torpedo.cpp  torpedo.h
server/response/ship_armament/types/: aircraft.cpp  aircraft.h  catapult.cpp  catapult.h  common.cpp  common.h  general.cpp  general.h  get_segments.h  guns.cpp  guns.h  propulsion.cpp  propulsion.h  searchers.cpp  searchers.h  throwers.cpp  throwers.h  torpedo.cpp  torpedo.h
server/response/test/: test_dist_livenshtein.cpp
test/: CMakeLists.txt  dekart_tree.cpp  main.cpp  nested_segments.cpp
